[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Cohaerentia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/scenes/CutScene.gd" type="Script" id=2]
[ext_resource path="res://assets/cutscene/screen_02.png" type="Texture" id=3]
[ext_resource path="res://assets/cutscene/screen_03_focus.png" type="Texture" id=4]
[ext_resource path="res://assets/cutscene/screen_03.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "CutScene"
length = 28.0
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Text/Phrase_001:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.55, 4.66642 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text/Phrase_002:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.10199, 5.52199, 9.26563 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Text/Phrase_003:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 9.86803, 10.1959, 15.638 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text/Phrase_004:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15.9331, 16.3593, 20.5884 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Text/Phrase_005:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 21.1786, 21.5392, 27.8665 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("screen_02:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 4.56142, 5.11875, 9.34348, 9.60575 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.827451 ), Color( 1, 1, 1, 0.827451 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("screen_03:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0, 9.60575, 10.2287, 20.7093, 21.0699 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("screen_03_focus:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 0, 15.8572, 16.2834, 20.8391, 21.201 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="CutScene" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CutScene = SubResource( 1 )

[node name="screen_02" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 600, 420 )
texture = ExtResource( 3 )

[node name="screen_03" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 600, 420 )
texture = ExtResource( 5 )

[node name="screen_03_focus" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 600, 420 )
texture = ExtResource( 4 )

[node name="Text" type="CanvasLayer" parent="."]

[node name="Skip" type="Label" parent="Text"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 247.557
margin_top = -420.822
margin_right = 247.557
margin_bottom = -368.822
custom_fonts/font = SubResource( 3 )
text = "SPACE to skip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phrase_001" type="Label" parent="Text"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -383.0
margin_bottom = -331.0
custom_fonts/font = SubResource( 2 )
text = "50 years ago, the God of Prosperity died."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phrase_002" type="Label" parent="Text"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -332.0
margin_right = 1.0
margin_bottom = -280.0
custom_fonts/font = SubResource( 2 )
text = "Their corpse fell from the Heavens and crushed Great Capitol."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phrase_003" type="Label" parent="Text"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -252.0
margin_bottom = -200.0
custom_fonts/font = SubResource( 2 )
text = "A crisis followed the event and many commoners
were filled with debts."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phrase_004" type="Label" parent="Text"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -148.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 2 )
text = "Such is your fate, and your only redemption is Treasure."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phrase_005" type="Label" parent="Text"]
modulate = Color( 1, 1, 1, 0.0623255 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0
custom_fonts/font = SubResource( 2 )
text = "Venture into the God's sacred Corpse
and hopefully you will gain freedom."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipCutsceneTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="SkipCutsceneTimer" to="." method="_on_SkipCutsceneTimer_timeout"]
